haqumei/src/generated/bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _JPCommonNode {
    pub pron: *mut ::std::os::raw::c_char,
    pub pos: *mut ::std::os::raw::c_char,
    pub ctype: *mut ::std::os::raw::c_char,
    pub cform: *mut ::std::os::raw::c_char,
    pub acc: ::std::os::raw::c_int,
    pub chain_flag: ::std::os::raw::c_int,
    pub prev: *mut _JPCommonNode,
    pub next: *mut _JPCommonNode,
}
pub type JPCommonNode = _JPCommonNode;
unsafe extern "C" {
    pub fn JPCommonNode_initialize(node: *mut JPCommonNode);
}
unsafe extern "C" {
    pub fn JPCommonNode_set_pron(node: *mut JPCommonNode, str_: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn JPCommonNode_set_pos(node: *mut JPCommonNode, str_: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn JPCommonNode_set_ctype(node: *mut JPCommonNode, str_: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn JPCommonNode_set_cform(node: *mut JPCommonNode, str_: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn JPCommonNode_set_acc(node: *mut JPCommonNode, acc: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn JPCommonNode_set_chain_flag(node: *mut JPCommonNode, flag: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn JPCommonNode_get_pron(node: *mut JPCommonNode) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn JPCommonNode_get_pos(node: *mut JPCommonNode) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn JPCommonNode_get_ctype(node: *mut JPCommonNode) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn JPCommonNode_get_cform(node: *mut JPCommonNode) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn JPCommonNode_get_acc(node: *mut JPCommonNode) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JPCommonNode_get_chain_flag(node: *mut JPCommonNode) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JPCommonNode_print(node: *mut JPCommonNode);
}
unsafe extern "C" {
    pub fn JPCommonNode_fprint(node: *mut JPCommonNode, fp: *mut FILE);
}
unsafe extern "C" {
    pub fn JPCommonNode_clear(node: *mut JPCommonNode);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _JPCommon {
    pub head: *mut JPCommonNode,
    pub tail: *mut JPCommonNode,
    pub label: *mut JPCommonLabel,
}
pub type JPCommon = _JPCommon;
unsafe extern "C" {
    pub fn JPCommon_initialize(jpcommon: *mut JPCommon);
}
unsafe extern "C" {
    pub fn JPCommon_push(jpcommon: *mut JPCommon, node: *mut JPCommonNode);
}
unsafe extern "C" {
    pub fn JPCommon_make_label(jpcommon: *mut JPCommon);
}
unsafe extern "C" {
    pub fn JPCommon_get_label_size(jpcommon: *mut JPCommon) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JPCommon_get_label_feature(jpcommon: *mut JPCommon) -> *mut *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn JPCommon_print(jpcommon: *mut JPCommon);
}
unsafe extern "C" {
    pub fn JPCommon_fprint(jpcommon: *mut JPCommon, fp: *mut FILE);
}
unsafe extern "C" {
    pub fn JPCommon_refresh(jpcommon: *mut JPCommon);
}
unsafe extern "C" {
    pub fn JPCommon_clear(jpcommon: *mut JPCommon);
}
unsafe extern "C" {
    pub fn mecab2njd(
        njd: *mut NJD,
        feature: *mut *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn njd_set_pronunciation(njd: *mut NJD);
}
unsafe extern "C" {
    pub fn njd_set_accent_phrase(njd: *mut NJD);
}
unsafe extern "C" {
    pub fn njd_set_accent_type(njd: *mut NJD);
}
unsafe extern "C" {
    pub fn njd_set_unvoiced_vowel(njd: *mut NJD);
}
unsafe extern "C" {
    pub fn njd_set_long_vowel(njd: *mut NJD);
}
unsafe extern "C" {
    pub fn njd2jpcommon(jpcommon: *mut JPCommon, njd: *mut NJD);
}
pub const text2mecab_result_t_TEXT2MECAB_RESULT_SUCCESS: text2mecab_result_t = 0;
pub const text2mecab_result_t_TEXT2MECAB_RESULT_INVALID_ARGUMENT: text2mecab_result_t = 1;
pub const text2mecab_result_t_TEXT2MECAB_RESULT_RANGE_ERROR: text2mecab_result_t = 2;
pub type text2mecab_result_t = ::std::os::raw::c_uint;
unsafe extern "C" {
    pub fn text2mecab(
        output: *mut ::std::os::raw::c_char,
        sizeOfOutput: usize,
        input: *const ::std::os::raw::c_char,
    ) -> text2mecab_result_t;
}
unsafe extern "C" {
    pub fn njd_set_digit(njd: *mut NJD);
}
